Add `coyote.msgs.receive(...)` (#252)
